--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
   "require": {
     "yiisoft/yii2": "^2.0.40",
     "wdmg/yii2-base": "^1.3.1",
-    "wdmg/yii2-users": "^1.2.3"
+    "wdmg/yii2-users": "^1.2.3",
+    "wdmg/yii2-helpers": "^1.4.4",
+    "wdmg/yii2-selectinput": "^1.0.9"
   },
   "minimum-stability": "dev",
   "autoload": {
