--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "yiisoft/yii2": "^2.0.40",
     "wdmg/yii2-base": "^1.3.1",
     "wdmg/yii2-users": "^1.2.3",
-    "wdmg/yii2-helpers": "^1.4.4",
+    "wdmg/yii2-helpers": "^1.4.5",
     "wdmg/yii2-selectinput": "^1.0.9"
   },
   "minimum-stability": "dev",
@@ -35,7 +35,12 @@
   },
   "extra": {
     "options": {
-      "routePrefix": "admin"
+      "routePrefix": "admin",
+      "supportLocales": [
+        "ru-RU",
+        "uk-UA",
+        "en-US"
+      ]
     }
   }
 }
