--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "wdmg/yii2-base": "^1.3.1",
     "wdmg/yii2-users": "^1.2.3",
     "wdmg/yii2-helpers": "^1.4.5",
+    "wdmg/yii2-validators": "^1.0.7",
     "wdmg/yii2-selectinput": "^1.0.9"
   },
   "minimum-stability": "dev",
@@ -40,6 +41,14 @@
         "ru-RU",
         "uk-UA",
         "en-US"
+      ],
+      "reservedFields": [
+        "admin",
+        "administrator",
+        "root",
+        "superuser",
+        "supervisor",
+        "timezone"
       ]
     }
   }
